# LLVM-openmp

./: CMakeLists.txt
libompd/: CMakeLists.txt
libompd/gdb-plugin/: CMakeLists.txt  __init__.py.in  frame_filter.py  loadompd.py  ompd.py  ompdModule.c  ompd_address_space.py  ompd_callbacks.py  ompd_handles.py  setup.py
libompd/gdb-wrapper/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  CudaGdb.h  OMPDCommand.cpp  OMPDCommand.h  OMPDContext.cpp  OMPDContext.h  StringParser.cpp  gdb_wrapper.cpp  ompd_typedefs.h  ompd_typedefs.h.bak
libompd/src/: CMakeLists.txt  Debug.h  TargetValue.cpp  TargetValue.h  omp-debug.cpp  omp-debug.h  omp-icv.cpp  omp-state.cpp  ompd-private.h  ompd-template.h  ompd-types.h  ompd.h  ompd_intel.cpp  ompd_intel.h  ompd_test.c  ompd_test.h  ompd_types.h  split_def_typedef.sh
libompd/test/: CMakeLists.txt  lit.cfg  lit.site.cfg  lit.site.cfg.in  ompt_plugin.h
libompd/test/ompt_tool/: CMakeLists.txt  README
libompd/test/ompt_tool/ompd_testsuite/: CMakeLists.txt  omp_helper.h  ompd_emptytest.c  ompd_sleep.c  ompd_test.cpp  ompd_test_Thread.h  ompd_test_internal.h  ompd_testsuite.h  ompt_plugin.cpp
libompd/test/openmp_examples/: CMakeLists.txt  example_1.c  example_2.c  example_3.c  example_4.c  example_5.c  example_task.c  fibonacci.c  nested.c  parallel.c
libomptarget/: CMakeLists.txt
libomptarget/deviceRTLs/nvptx/: CMakeLists.txt
libomptarget/deviceRTLs/nvptx/src/: loop.cu  ompd-specific.cu  ompd-specific.h  omptarget-nvptx.cu  omptarget-nvptx.h  parallel.cu  reduction.cu  task.cu
libomptarget/plugins/cuda/src/: rtl.cpp
runtime/: CMakeLists.txt
runtime/src/: CMakeLists.txt  exports_so.txt  kmp.h  kmp_barrier.cpp  kmp_cancel.cpp  kmp_config.h.cmake  kmp_csupport.cpp  kmp_dispatch.cpp  kmp_ftn_entry.h  kmp_ftn_os.h  kmp_global.cpp  kmp_gsupport.cpp  kmp_runtime.cpp  kmp_sched.cpp  kmp_settings.cpp  kmp_settings.h  kmp_taskdeps.cpp  kmp_tasking.cpp  kmp_wait_release.h  ompd-specific.cpp  ompd-specific.h  ompt-event-specific.h  ompt-general.cpp  ompt-internal.h  ompt-specific.cpp  ompt-specific.h  z_Linux_util.cpp
runtime/src/include/50/: omp-tools.h.var  omp_lib.f.var  ompt.h.var
runtime/test/: lit.cfg
runtime/test/ompt/: callback.h  ompt-util.h
runtime/test/ompt/cancel/: cancel_parallel.c  cancel_taskgroup.c  cancel_worksharing.c
runtime/test/ompt/loadtool/: tool_available.c
runtime/test/ompt/misc/: teams.c
runtime/test/ompt/parallel/: dynamic_enough_threads.c  dynamic_not_enough_threads.c  max_active_levels_serialized.c  nested_lwt.c  nested_serialized.c  no_thread_num_clause.c  not_enough_threads.c  parallel_if0.c  teams.c  teams_distribute.c  teams_distribute_parallel.c
runtime/test/ompt/synchronization/: flush.c  lock.c  master.c  nest_lock.c  ordered_dependences.c  taskgroup.c  taskwait.c  test_lock.c  test_nest_lock.c  test_nest_lock_parallel.c
runtime/test/ompt/synchronization/barrier/: explicit.c  for_loop.c  for_simd.c  parallel_region.c  sections.c  single.c
runtime/test/ompt/tasks/: dependences.c  explicit_task.c  serialized.c  task_memory.c  task_types.c  task_types_serialized.c  taskyield.c
runtime/test/ompt/worksharing/: sections.c  single.c
